# AI-Risk-Constellation-System

./: .env.example  .gitignore  ProjectPlan.md  README.md  RoughPlan.md  bob_instructions.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
backend/api/: __init__.py  dependencies.py  error_handlers.py  main.py
backend/connectors/: README.md  __init__.py  neo4j_connector.py  postgres_connector.py
backend/core/: README.md  __init__.py  database_init.py  logging_config.py  neo4j_schema.cypher  postgres_schema.sql
backend/database/: query_optimizer.py
backend/models/: collaboration.py
backend/services/: __init__.py  alert_engine.py  alert_rules.py  alert_scheduler.py  audit_logger.py  cache_invalidation.py  cache_monitor.py  cache_service.py  cache_strategies.py  collaboration_service.py  data_ingestion_service.py  data_validator.py  graph_builder_service.py  health_check.py  metrics_collector.py  nl_query_processor.py  reporting_engine.py  scenario_engine.py  streaming_ingestion.py  stress_testing.py  update_publisher.py
backend/tests/: test_api.py  test_database.py  test_services.py
data/synthetic/: counterparty_generator.py  counterparty_network.gexf  generate_all.py  market_data_generator.py  portfolio_generator.py  transaction_generator.py
docker/postgres/: init.sql
docs/: PERFORMANCE_OPTIMIZATIONS.md  UAT_REPORT.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: 01_navigation.spec.js  02_dashboard.spec.js  03_risk_constellation.spec.js  04_portfolio_analysis.spec.js  05_api_error_handling.spec.js  06_monitoring.spec.js
frontend/e2e-report/: index.html
frontend/src/: App.css  App.jsx  index.css
ml_engine/: __init__.py
ml_engine/explainability/: __init__.py  attention_visualizer.py  risk_narrative_generator.py  shap_explainer.py
ml_engine/graph_networks/: __init__.py  gat_model.py  graph_builder.py  risk_cascade_predictor.py  temporal_gnn.py  (+3 more)
scripts/: backup.sh  ingest_all_data.py  ingest_market_data.py  performance_test.py  run_integration_tests.sh  setup.sh  start.sh  stop.sh
(+123 files in other folders)
